# SEC-Risk-Analyzer

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: precomputed_analyses.json
docs/: architecture.md  technical-report.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AnalysisDashboard.tsx  CompanyControls.tsx  Logo.tsx  RecentAnalysesTable.tsx  RiskTrendChart.tsx
frontend/src/data/: companies.ts
frontend/src/utils/: format.ts  highlight.tsx
src/sec_sentiment/: __init__.py  config.py  errors.py  main.py
src/sec_sentiment/api/: __init__.py  app.py  routes.py
src/sec_sentiment/clients/: __init__.py  sec_client.py
src/sec_sentiment/ingestion/: __init__.py  filing_ingestor.py
src/sec_sentiment/llm/: __init__.py  explainer.py
src/sec_sentiment/models/: __init__.py  schemas.py
src/sec_sentiment/nlp/: __init__.py  financial_analyzer.py
src/sec_sentiment/parsing/: __init__.py  filing_parser.py
src/sec_sentiment/pipeline/: __init__.py  analysis_service.py
src/sec_sentiment/storage/: __init__.py  precomputed_cache.py  sqlite_store.py
tests/: test_analysis_service.py  test_analyzer.py  test_storage.py
