[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-sentiment"
version = "0.1.0"
description = "SEC filing sentiment and risk analysis pipeline."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SEC Sentiment Project" }]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "openai>=1.93.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sec_sentiment"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["bs4.*"]
ignore_missing_imports = true
